--- a/QuickLookAddict/styles.css
+++ b/QuickLookAddict/styles.css
@@ -1,6 +1,8 @@
 /* body */
 body {
     margin: 20px 40px;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 
 /* table */
@@ -8,7 +10,6 @@ table {
     background: #FFC4FF;
     border-collapse: collapse;
     border: 1px solid #009BCB;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 10px;
     width: 100%;
 }
@@ -29,4 +30,5 @@ table td {
 }
 .sub {
     padding: 4px 2px;
+    white-space: pre;
 }
