--- a/QuickLookAddict/addic7ed-grey.css
+++ b/QuickLookAddict/addic7ed-grey.css
@@ -1,53 +1,25 @@
-/* basis */
-ul.infoBar {
-    padding: 0;
-    margin: 0;
-    margin-left: -5px;
-    list-style: none;
+h1 {
+    font-size: 16px;
+    color: #566EBF;
 }
-ul.infoBar > li {
-    display: inline-block;
-    padding-right: 5px;
-    padding-left: 5px;
-}
-.green {
-    color: green;
-}
-.red {
-    color: red;
+h1 a {
+    color: #566EBF;
+    text-decoration: none;
 }
 
-/* body */
-body {
-    margin: 20px 40px;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12px;
+h1 a:hover:before {
+    color: #566EBF;
 }
 
 /* table */
 table {
     background: #F6F8FA;
-    border-collapse: collapse;
-    border: 1px solid #009BCB;
-    font-size: 10px;
-    width: 100%;
+    border-color: #009BCB;
 }
 table td {
-    border: 1px solid #009BCB;
-    vertical-align: middle;
+    border-color: #009BCB;
 }
 
 .id {
     color: #0000FF;
-    font-weight: bold;
-    padding: 0 8px;
-    width: 1%;
-}
-.time {
-    text-align: center;
-    width: 200px;
-}
-.sub {
-    padding: 4px 2px;
-    white-space: pre;
 }
