--- a/QuickLookAddict/farran.css
+++ b/QuickLookAddict/farran.css
@@ -1,53 +1,26 @@
-/* basis */
-ul.infoBar {
-    padding: 0;
-    margin: 0;
-    margin-left: -5px;
-    list-style: none;
+h1 {
+    font-size: 16px;
+    color: #566EBF;
 }
-ul.infoBar > li {
-    display: inline-block;
-    padding-right: 5px;
-    padding-left: 5px;
+h1 a {
+    color: #566EBF;
+    text-decoration: none;
 }
-.green {
-    color: green;
-}
-.red {
-    color: red;
+
+h1 a:hover:before {
+    color: #566EBF;
 }
 
 /* body */
 body {
-    margin: 20px 40px;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 12px;
     color: #272822;
 }
 
 /* table */
 table {
     background: #F9F9F9;
-    border-collapse: collapse;
-    border: 1px solid #272822;
-    font-size: 10px;
-    width: 100%;
+    border-color: #272822;
 }
 table td {
-    border: 1px solid #272822;
-    vertical-align: middle;
-}
-
-.id {
-    font-weight: bold;
-    padding: 0 8px;
-    width: 1%;
-}
-.time {
-    text-align: center;
-    width: 200px;
-}
-.sub {
-    padding: 4px 2px;
-    white-space: pre;
+    border-color: #272822;
 }
