--- a/QuickLookAddict/themes/dark-light.css
+++ b/QuickLookAddict/themes/dark-light.css
@@ -1,7 +1,7 @@
 :root {
-  --bg-color: #F7F7F7;
-  --bg-even-color: #F7F7F7;
-  --bg-odd-color: #EEEEEE;
+  --bg-color: #F1F1F1;
+  --bg-even-color: #F1F1F1;
+  --bg-odd-color: #FFFFFF;
   --border: #d4d4d4;
   --green-color: #35b047;
   --index-number-text: #000000;
@@ -124,15 +124,15 @@ table tr td:first-child + td + td {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg-color: #2E2D33;
-    --bg-even-color: #343236;
-    --bg-odd-color: #515255;
+    --bg-color: #434443;
+    --bg-even-color: #1F1F1F;
+    --bg-odd-color: #121212;
     --border: #343434;
     --green-color: #62BA46;
     --index-number-text: #DCDCDC;
     --info-text: #ffffff;
     --red-color: #FE5258;
     --subtitle-text: #DCDCDC;
-    --time-text: #419CFF;
+    --time-text: #61ADFF;
   }
 }
