--- a/QuickLookAddict/themes/dark-light.css
+++ b/QuickLookAddict/themes/dark-light.css
@@ -2,7 +2,7 @@
   --bg-color: #F1F1F1;
   --bg-even-color: #F1F1F1;
   --bg-odd-color: #FFFFFF;
-  --border: #d4d4d4;
+  --border: #FAFAFA;
   --green-color: #35b047;
   --index-number-text: #000000;
   --info-text: #000000;
@@ -127,7 +127,7 @@ table tr td:first-child + td + td {
     --bg-color: #434443;
     --bg-even-color: #1F1F1F;
     --bg-odd-color: #121212;
-    --border: #343434;
+    --border: #171717;
     --green-color: #62BA46;
     --index-number-text: #DCDCDC;
     --info-text: #ffffff;
